# hack-large-text

./: CLAUDE.md  README.md  pyproject.toml
experiments/: 1.0 Workspace ingestion.ipynb  1.1 Section Hierarchy.ipynb  1.2 Add Vector Embeddings.ipynb  1.3 FAISS Indexing and Query.ipynb  1.4 DSPy RAG Demo.ipynb  1.5 DSPy RAG Optimization.ipynb  chess_pdf.faiss  debug_fonts.py  golden_qa_data.json  golden_qa_with_answers.json  golden_qa_with_questions.json  gqa_answer_gen.py  gqa_context_gathering.py  gqa_question_gen.py  questions.md  rag_agent.ipynb  workspace_with_sections.json
resources/: plan.md
src/hack/: chat_app.py  demo_rag.py  main.py  pdf_processor.py  pipeline_optimizer.py  rag_agent.py  retriever.py
src/hack/models/: rag_models.py
src/hack/optimized_workspace_agent/: metadata.json
tests/hack/: test_main.py  test_retriever.py
